--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <html> 
  <head></head> 
- <body> <hearder class="cabecalho"> 
-   <img> 
-   <h1> vai ser uma imagem aqui</h1> 
-   <ul class="cabecalho-lista-item"> 
-    <li class="cabecalho-lista-item">Estudante</li> 
-    <li class="cabecalho-lista-item">Escola</li> 
-   </ul> 
+ <body> 
+  <hearder class="cabecalho"> 
+  <img class=”cabecalho-imagem” src=”./img/alurastart logo 1.png” alt=”logo da alura
+  start”>
+  <ul class=”cabecalho-lista-item”>
+    <li class=”cabecalho-lista-item”>Estudante</li>
+    <li class=”cabecalho-lista-item”>Escola</li>
+  </ul>
   </hearder> 
+  <img src=”./img/alurastart logo 1.png” alt=”logo da alura start”>
  </body>
 </html>
